# napari-video-streamer

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
napari_video_streamer/: __init__.py  napari.yaml
